src/components/Jumbotron/Jumbotron.module.css
.jumbotron {
    height: 500px;
    background-color: #eee;

    .container {
        max-width: 1200px;
        height: 500px;
        position: relative;
        margin: auto;

        .logo {
            position: absolute;
            padding: 10px;
        }

        .title {
            width: 50%;
            height: 100%;
            display: inline-block;
            position: relative;
            padding-left: 20px;
    
            .inner {
                position: relative;
                display: inline-block;
                transform: translate(0, -50%);
                font-size: 48px;
                top: 50%;
    
                .lato {
                    font-family: 'Lato';
                    font-weight: 300;
                }
        
                .playwrite {
                    font-family: 'Playwrite IS Variable';
                }
    
                .cta {
                    display: inline-block;
                    position: relative;
                    background: linear-gradient(#ffb100, #ff8e3c);
                    font-family: 'Lato';
                    border-radius: 999px;
                    padding: 5px 10px;
                    color: white;
                    margin-top: 20px;
                    font-size: 24px;
                    left: 50%;
                    transform: translate(-50%, 0);
                    box-shadow: #bbb 0 3px 5px;
                    cursor: pointer;
                    user-select: none;
                    transition: 200ms;

                    &:hover {
                        transform: translate(-50%, -3px) scale(1.05);
                        box-shadow: #bbb 0 5px 10px;
                    }
                }
            }
        }
    
        .image {
            display: inline-block;
            position: absolute;
            bottom: 0;
            width: 500px;
            height: 500px;
            vertical-align: top;
            user-select: none;
        }
    }
}

@media screen and (max-width: 800px) {
    .title {
        width: 100% !important;

        .inner {
            left: 50%;
            transform: translate(-50%, -50%) !important;
        }
    }

    .image {
        display: none !important;
    }
}

